--- a/Intralism Mapping Assistant/Intralism Mapping Assistant.csproj
+++ b/Intralism Mapping Assistant/Intralism Mapping Assistant.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -83,7 +84,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\IMUMath.cs" />
+    <Compile Include="Util\IMAMath.cs" />
     <Compile Include="ZoomStopMethods.cs">
       <SubType>Form</SubType>
     </Compile>
