--- a/Intralism Mapping Assistant/Intralism Mapping Assistant.csproj
+++ b/Intralism Mapping Assistant/Intralism Mapping Assistant.csproj
@@ -85,6 +85,9 @@
     <Compile Include="MainForm\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForm\SplitterMethods.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainForm\GeneralMethods.cs">
