--- a/Intralism Mapping Assistant/Intralism Mapping Assistant.csproj
+++ b/Intralism Mapping Assistant/Intralism Mapping Assistant.csproj
@@ -84,6 +84,9 @@
     <Compile Include="MainForm\EnvObjectCreatorMethods.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MainForm\EnvSpriteAnimatorMethods.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm\EnvSpriteMovementMethods.cs">
       <SubType>Form</SubType>
     </Compile>
